--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,15 @@
 <html>
 
 <head>
-<meta charset="utf-8">
-<title>Particle Components</title>
-<meta name="description" content="Particle Elements">
-<meta name="author" content="David Linke">
-<link rel="stylesheet" href="assets/css/styles.css?v=1.0">
+    <meta charset="utf-8">
+    <title>Particle Components</title>
+    <meta name="description" content="Particle Elements">
+    <meta name="author" content="David Linke">
+    <link rel="stylesheet" href="assets/css/styles.css?v=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest">
 </head>
 
 <body>
