--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicon/site.webmanifest">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,19 +18,22 @@
     <h1>Web components the vanilla way</h1>
     <h2>Button</h2>
     <div class="side-by-side">
-        <ptc-button elevation="1" variant="completion"><i class="fas fa-plus"></i>&nbsp;Completion</ptc-button>
+        <ptc-button elevation="1" variant="completion"><i data-feather="plus"></i>&nbsp;Completion</ptc-button>
 
-        <ptc-button elevation="1" variant="primary"><i class="fas fa-plus"></i>&nbsp;Primary</ptc-button>
+        <ptc-button elevation="1" variant="primary"><i data-feather="plus"></i>&nbsp;Primary</ptc-button>
 
-        <ptc-button elevation="1" variant="primary" disabled><i class="fas fa-plus"></i>&nbsp;Primary Disabled</ptc-button>
+        <ptc-button elevation="1" variant="primary" disabled><i data-feather="plus"></i>&nbsp;Primary Disabled
+        </ptc-button>
 
-        <ptc-button elevation="1" variant="secondary"><i class="fas fa-plus"></i>&nbsp;Secondary</ptc-button>
+        <ptc-button elevation="1" variant="secondary"><i data-feather="plus"></i>&nbsp;Secondary</ptc-button>
 
-        <ptc-button elevation="1" variant="secondary" disabled><i class="fas fa-plus"></i>&nbsp;Secondary Disabled</ptc-button>
+        <ptc-button elevation="1" variant="secondary" disabled><i data-feather="plus"></i>&nbsp;Secondary Disabled
+        </ptc-button>
 
-        <ptc-button elevation="1" variant="text" href="https://www.google.com"><i class="fas fa-plus"></i>&nbsp;Text</ptc-button>
+        <ptc-button elevation="1" variant="text" href="https://www.google.com"><i data-feather="plus"></i>&nbsp;Text
+        </ptc-button>
 
-        <ptc-button elevation="1" variant="text" disabled><i class="fas fa-plus"></i>&nbsp;Text Disabled</ptc-button>
+        <ptc-button elevation="1" variant="text" disabled><i data-feather="plus"></i>&nbsp;Text Disabled</ptc-button>
     </div>
     <h2>Card</h2>
     <ptc-card elevation="1">
@@ -42,6 +44,15 @@
     <h2>Checkbox</h2>
     <ptc-checkbox>Label 1<br>label</ptc-checkbox>
     <script type="module" src="assets/js/scripts.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
+
+    <script>
+        feather.replace({ 
+            'stroke-width': 2,
+            width:22,
+            height:22
+        })
+    </script>
 </body>
 
 </html>
