--- a/src/index.html
+++ b/src/index.html
@@ -16,26 +16,27 @@
 <body>
 
     <h1>Web components the vanilla way</h1>
-    <h2>Button</h2>
+
+    <h2>Input</h2>
     <div class="side-by-side">
-        <!---->
-        <ptc-button elevation="1" variant="completion"><i data-feather="check"></i>&nbsp;Completion</ptc-button>
-
-        <ptc-button elevation="1" variant="primary"><i data-feather="plus"></i>&nbsp;Primary</ptc-button>
-
-        <ptc-button elevation="1" variant="primary" disabled><i data-feather="plus"></i>&nbsp;Primary Disabled
-        </ptc-button> 
-
-        <ptc-button elevation="1" variant="secondary"><i data-feather="download"></i>&nbsp;Secondary</ptc-button>
-
-        <ptc-button elevation="1" variant="secondary" woot disabled><i data-feather="download"></i>&nbsp;Secondary Disabled
-        </ptc-button>
-
-         <ptc-button variant="text" href="https://www.google.com"><i data-feather="type"></i>&nbsp;Text
-        </ptc-button>
-
-        <ptc-button variant="text" disabled><i data-feather="type"></i>&nbsp;Text Disabled</ptc-button> 
+        <ptc-input type="text"></ptc-input>
     </div>
+
+    <h2>Checkbox</h2>
+    <div class="side-by-side">
+        <ptc-checkbox>Unchecked</ptc-checkbox>
+        <ptc-checkbox checked>Checked</ptc-checkbox>
+        <ptc-checkbox indeterminate>Indeterminate</ptc-checkbox>
+
+        <ptc-checkbox disabled>Unchecked Disabled</ptc-checkbox>
+        <ptc-checkbox checked disabled>Checked Disabled</ptc-checkbox>
+        <ptc-checkbox indeterminate disabled>Indeterminate Disabled</ptc-checkbox>
+        <ptc-checkbox>A singular consciousness that spawned an entire race of machines. We don’t know who struck first,
+            us or them. But we know that it was us that scorched the sky. At the time they were dependent on <a
+                href="javascript:;" data-h="https://en.wikipedia.org/wiki/Solar_power">solar power</a> and it was believed
+            that they would be unable to survive without an energy source as abundant as the sun.</ptc-checkbox>
+    </div>
+    
     <h2>Card</h2>
     <div class="side-by-side">
         <ptc-card elevation="1" class="cards">
@@ -72,22 +73,34 @@
         </ptc-card>
     </div>
 
-    <h2>Checkbox</h2>
+    <h2>Button</h2>
     <div class="side-by-side">
-        <ptc-checkbox tab-index="-1">Morpheous</ptc-checkbox>
-        <ptc-checkbox checked>Neo</ptc-checkbox>
+        <ptc-button elevation="1" variant="completion"><i data-feather="check"></i>&nbsp;Completion</ptc-button>
 
-        <ptc-checkbox tab-index="-1" disabled>Morpheous</ptc-checkbox>
-        <ptc-checkbox checked disabled>Neo</ptc-checkbox>
-        <ptc-checkbox>A singular consciousness that spawned an entire race of machines. We don’t know who struck first,
-            us or them. But we know that it was us that scorched the sky. At the time they were dependent on <a
-                href="javascript:;" data-h="https://en.wikipedia.org/wiki/Solar_power">solar power</a> and it was believed
-            that they would be unable to survive without an energy source as abundant as the sun.</ptc-checkbox>
+        <ptc-button elevation="1" variant="primary"><i data-feather="plus"></i>&nbsp;Primary</ptc-button>
+
+        <ptc-button elevation="1" variant="primary" disabled><i data-feather="plus"></i>&nbsp;Primary Disabled
+        </ptc-button> 
+
+        <ptc-button elevation="1" variant="secondary"><i data-feather="download"></i>&nbsp;Secondary</ptc-button>
+
+        <ptc-button elevation="1" variant="secondary" woot disabled><i data-feather="download"></i>&nbsp;Secondary Disabled
+        </ptc-button>
+
+         <ptc-button variant="text" href="https://www.google.com"><i data-feather="type"></i>&nbsp;Text
+        </ptc-button>
+
+        <ptc-button variant="text" disabled><i data-feather="type"></i>&nbsp;Text Disabled</ptc-button> 
     </div>
     <script type="module" src="assets/js/scripts.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
 
     <script>
+        document.querySelectorAll('ptc-checkbox').forEach((checkbox)=>{
+            checkbox.addEventListener('blur',()=>{
+                console.log('blur')
+            }, true)
+        })
         feather.replace({
             'stroke-width': 2,
             width: 22,
