--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
 
     <script>
+        button = document.querySelector('ptc-button');
         document.querySelectorAll('ptc-checkbox').forEach((checkbox)=>{
             checkbox.addEventListener('blur',()=>{
                 console.log('blur')
