--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,63 @@
 
     <h1>Web components the vanilla way</h1>
 
+    <h2>Select</h2>
+    <div class="side-by-side">
+        <ptc-select>
+            <ptc-option value="AL">Alabama</ptc-option>
+            <ptc-option value="AK">Alaska</ptc-option>
+            <ptc-option value="AZ">Arizona</ptc-option>
+            <ptc-option value="AR">Arkansas</ptc-option>
+            <ptc-option value="CA">California</ptc-option>
+            <ptc-option value="CO">Colorado</ptc-option>
+            <ptc-option value="CT">Connecticut</ptc-option>
+            <ptc-option value="DE">Delaware</ptc-option>
+            <ptc-option value="DC">District Of Columbia</ptc-option>
+            <ptc-option value="FL">Florida</ptc-option>
+            <ptc-option value="GA">Georgia</ptc-option>
+            <ptc-option value="HI">Hawaii</ptc-option>
+            <ptc-option value="ID">Idaho</ptc-option>
+            <ptc-option value="IL">Illinois</ptc-option>
+            <ptc-option value="IN">Indiana</ptc-option>
+            <ptc-option value="IA">Iowa</ptc-option>
+            <ptc-option value="KS">Kansas</ptc-option>
+            <ptc-option value="KY">Kentucky</ptc-option>
+            <ptc-option value="LA">Louisiana</ptc-option>
+            <ptc-option value="ME">Maine</ptc-option>
+            <ptc-option value="MD">Maryland</ptc-option>
+            <ptc-option value="MA">Massachusetts</ptc-option>
+            <ptc-option value="MI">Michigan</ptc-option>
+            <ptc-option value="MN">Minnesota</ptc-option>
+            <ptc-option value="MS">Mississippi</ptc-option>
+            <ptc-option value="MO">Missouri</ptc-option>
+            <ptc-option value="MT">Montana</ptc-option>
+            <ptc-option value="NE">Nebraska</ptc-option>
+            <ptc-option value="NV">Nevada</ptc-option>
+            <ptc-option value="NH">New Hampshire</ptc-option>
+            <ptc-option value="NJ">New Jersey</ptc-option>
+            <ptc-option value="NM">New Mexico</ptc-option>
+            <ptc-option value="NY">New York</ptc-option>
+            <ptc-option value="NC">North Carolina</ptc-option>
+            <ptc-option value="ND">North Dakota</ptc-option>
+            <ptc-option value="OH">Ohio</ptc-option>
+            <ptc-option value="OK">Oklahoma</ptc-option>
+            <ptc-option value="OR">Oregon</ptc-option>
+            <ptc-option value="PA">Pennsylvania</ptc-option>
+            <ptc-option value="RI">Rhode Island</ptc-option>
+            <ptc-option value="SC">South Carolina</ptc-option>
+            <ptc-option value="SD">South Dakota</ptc-option>
+            <ptc-option value="TN">Tennessee</ptc-option>
+            <ptc-option value="TX">Texas</ptc-option>
+            <ptc-option value="UT">Utah</ptc-option>
+            <ptc-option value="VT">Vermont</ptc-option>
+            <ptc-option value="VA">Virginia</ptc-option>
+            <ptc-option value="WA">Washington</ptc-option>
+            <ptc-option value="WV">West Virginia</ptc-option>
+            <ptc-option value="WI">Wisconsin</ptc-option>
+            <ptc-option value="WY">Wyoming</ptc-option>
+        </ptc-select>		
+    </div>
+
     <h2>Input</h2>
     <div class="side-by-side">
         <ptc-input type="text"></ptc-input>
