code cleanup and proper commenting

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 
     <h2>Select</h2>
     <div class="side-by-side">
+        <div style="width: 300px; height: 300px; overflow: hidden;">
         <ptc-select>
             <ptc-option value="AL">Alabama</ptc-option>
             <ptc-option value="AK">Alaska</ptc-option>
@@ -71,7 +72,9 @@
             <ptc-option value="WV">West Virginia</ptc-option>
             <ptc-option value="WI">Wisconsin</ptc-option>
             <ptc-option value="WY">Wyoming</ptc-option>
-        </ptc-select>		
+        </ptc-select>	
+        
+        </div>	
     </div>
 
     <h2>Input</h2>
