--- a/src/component-text-input.html
+++ b/src/component-text-input.html
@@ -15,30 +15,14 @@
 
 <body>
 
-    <h1>Web components the vanilla way</h1>
-
-    <ul>
-        <li>
-            <h2>Buttons & Links</h2>
-            <ul>
-                <li><a href="./component-button.html">Button</a></li>
-            </ul>
-        </li>
-        <li>
-            <h2>Display</h2>
-            <ul>
-                <li><a href="./component-card.html">Card</a></li>
-            </ul>
-        </li>
-        <li>
-            <h2>Form Elements</h2>
-            <ul>
-                <li><a href="./component-checkbox.html">Checkbox</a></li>
-                <li><a href="./component-select.html">Select</a></li>
-                <li><a href="./component-text-input.html">Text Input</a></li>
-            </ul>
-        </li>
-    </ul>
+    <p><a href="./">Home</a> &middot Text Input</p>
+    <h1>Text Input</h1>
+    
+    <div class="side-by-side">
+        <div style="width: 300px; height: 300px; overflow: hidden;">
+            <ptc-input type="text"></ptc-input>
+        </div>	
+    </div>
     <script src="https://unpkg.com/feather-icons"></script>
     <script type="module" src="assets/js/scripts.js"></script>
 </body>
